feat: test the queue schedule

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,11 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+# Local port
+APP_PORT=81
+FORWARD_DB_PORT=33061
+FORWARD_REDIS_PORT=63791
+
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
@@ -15,10 +20,10 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 FILESYSTEM_DRIVER=local
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+QUEUE_CONNECTION=redis
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
