feat: add supervisord laravel-worker

--- a/.docker/supervisord.conf
+++ b/.docker/supervisord.conf
@@ -28,3 +28,16 @@ stderr_logfile_maxbytes=50MB
 stderr_logfile_backups=5
 stderr_capture_maxbytes=0
 stderr_events_enabled=false
+
+[program:laravel-worker]
+process_name=%(program_name)s_%(process_num)02d
+command=php /var/www/app/artisan queue:work --sleep=3 --tries=3 --max-time=3600
+autostart=true
+autorestart=true
+stopasgroup=true
+killasgroup=true
+user=root
+numprocs=1
+redirect_stderr=true
+stdout_logfile=/var/www/app/worker.log
+stopwaitsecs=3600
