--- a/.docker/supervisord.conf
+++ b/.docker/supervisord.conf
@@ -37,7 +37,21 @@ autorestart=true
 stopasgroup=true
 killasgroup=true
 user=root
+startsecs=0
 numprocs=1
 redirect_stderr=true
 stdout_logfile=/var/www/app/worker.log
 stopwaitsecs=3600
+
+[program:laravel-scheduler]
+process_name=%(program_name)s_%(process_num)02d
+command=/scheduler.sh
+autostart=true
+autorestart=true
+user=root
+startsecs=0
+numprocs=1
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
