feat: add xdebug

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+# Debug
+SAIL_XDEBUG=false
+SAIL_XDEBUG_PORT=9003
+
 # Local port
 APP_PORT=81
 FORWARD_DB_PORT=33061
