--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,12 @@ version: "3"
 services:
     laravel.test:
         build:
-            context: ./vendor/laravel/sail/runtimes/8.0
+            context: ./docker/8.0
             dockerfile: Dockerfile
             args:
                 WWWGROUP: "${WWWGROUP}"
+                XDEBUG: "${SAIL_XDEBUG:-false}"
+                XDEBUG_PORT: "${SAIL_XDEBUG_PORT:-9003}"
         image: sail-8.0/app
         ports:
             - "${APP_PORT:-80}:80"
@@ -22,7 +24,7 @@ services:
             - redis
             - meilisearch
             - selenium
-            
+
     mysql:
         image: "mysql:8.0"
         ports:
