--- a/.github/workflows/ecs.yml
+++ b/.github/workflows/ecs.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Docker build
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG: ${{ github.sha }}
+          IMAGE_TAG: "main" # ${{ github.sha }}
         run: |
           docker build -f docker/ecs/Dockerfile -t $ECR_REGISTRY/${{ env.APP_NAME }}:$IMAGE_TAG .
           docker push $ECR_REGISTRY/${{ env.APP_NAME }}:$IMAGE_TAG
@@ -60,7 +60,7 @@ jobs:
         with:
           task-definition: task-definition.json
           container-name: ${{ env.APP_NAME }}-container
-          image: ${{ steps.login-ecr.outputs.registry }}/${{ env.APP_NAME }}:${{ github.sha }}
+          image: ${{ steps.login-ecr.outputs.registry }}/${{ env.APP_NAME }}:main
 
       - name: Deploy to Amazon ECS service
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
