--- a/.github/workflows/ecs.yml
+++ b/.github/workflows/ecs.yml
@@ -12,6 +12,7 @@ jobs:
     env:
       APP_NAME: laravel-sail-ecs
       AWS_REGION: ap-southeast-1
+      IMAGE_TAG: main
 
     steps:
       - name: Checkout
@@ -45,10 +46,9 @@ jobs:
       - name: Docker build
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG: "main" # ${{ github.sha }}
         run: |
-          docker build -f docker/ecs/Dockerfile -t $ECR_REGISTRY/${{ env.APP_NAME }}:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/${{ env.APP_NAME }}:$IMAGE_TAG
+          docker build -f docker/ecs/Dockerfile -t $ECR_REGISTRY/${{ env.APP_NAME }}:${{ env.IMAGE_TAG }} .
+          docker push $ECR_REGISTRY/${{ env.APP_NAME }}:${{ env.IMAGE_TAG }}
 
       - name: Download task def
         run: |
@@ -60,7 +60,7 @@ jobs:
         with:
           task-definition: task-definition.json
           container-name: ${{ env.APP_NAME }}-container
-          image: ${{ steps.login-ecr.outputs.registry }}/${{ env.APP_NAME }}:main
+          image: ${{ steps.login-ecr.outputs.registry }}/${{ env.APP_NAME }}:${{ env.IMAGE_TAG }}
 
       - name: Deploy to Amazon ECS service
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
