--- a/docker/8.0/Dockerfile
+++ b/docker/8.0/Dockerfile
@@ -47,7 +47,7 @@ RUN if [ "${XDEBUG}" = 'true' ]; then \
     apt-get update \
     && apt-get install -y php-xdebug \
     && echo "[XDebug]" > /etc/php/8.0/cli/conf.d/php-ext-xdebug.ini \
-    && echo "zend_extension = \"$(find /usr/lib/php/ -name xdebug.so | sort -z | head -n 1)\"" >> /etc/php/8.0/cli/conf.d/php-ext-xdebug.ini \
+    # && echo "zend_extension = \"$(find /usr/lib/php/ -name xdebug.so | sort -z | head -n 1)\"" >> /etc/php/8.0/cli/conf.d/php-ext-xdebug.ini \
     && echo "xdebug.client_port = ${XDEBUG_PORT}" >> /etc/php/8.0/cli/conf.d/php-ext-xdebug.ini \
     && echo "xdebug.mode = debug" >> /etc/php/8.0/cli/conf.d/php-ext-xdebug.ini \
     && echo "xdebug.start_with_request = yes" >> /etc/php/8.0/cli/conf.d/php-ext-xdebug.ini \
