--- a/docker/ecs/.docker/supervisord.conf
+++ b/docker/ecs/.docker/supervisord.conf
@@ -36,7 +36,7 @@ autostart=true
 autorestart=true
 stopasgroup=true
 killasgroup=true
-user=root
+user=www-data
 startsecs=0
 numprocs=1
 redirect_stderr=true
@@ -48,7 +48,7 @@ process_name=%(program_name)s_%(process_num)02d
 command=/scheduler.sh
 autostart=true
 autorestart=true
-user=root
+user=www-data
 startsecs=0
 numprocs=1
 redirect_stderr=true
