chore: remove metrics

--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -55,7 +55,7 @@ Resources:
       ClusterName: !Sub "${AWS::StackName}-cluster"
       ClusterSettings:
         - Name: containerInsights
-          Value: enabled
+          Value: disabled
 
   ## Task Definition
   EcsTaskDefinition:
